# times-data

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/specs/: 2026-04-20-interface-design.md  2026-04-20-interface-implementation-plan.md  layer-0-mvp.md  release-checklist.md
docs/superpowers/plans/: 2026-04-20-v0-2-0-no-slop-shipping.md
examples/demos_001/: build.py
interface/: README.md  __init__.py
interface/backend/: __init__.py  app.py  schemas.py  session_store.py
interface/backend/services/: __init__.py  dd_service.py  diff_service.py  entity_service.py  model_service.py  parameter_service.py  results_service.py  validation_service.py  wiki_service.py
interface/backend/tests/: test_entity_api.py  (+8 more)
interface/frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
scripts/: demo_interface_value.py  smoke_frontend.sh  smoke_interface.py  smoke_release.py
tests/: test_demos_solve.py  test_io.py  test_lst_parser.py  test_model.py  test_model_diff.py  test_schema.py  test_validation.py  test_validation_messages.py  test_wiki.py
times_data/cli/: main.py
times_data/compiler/: __init__.py  dd_compiler.py
times_data/diagnose/: __init__.py  lst_parser.py
times_data/diff/: __init__.py  model_diff.py
times_data/io/: __init__.py  dd_import.py  yaml_io.py
times_data/model/: __init__.py  commodity.py  config.py  model.py  parameter.py  process.py
times_data/schema/: __init__.py  generate.py  indexes.py  parameters.py  sets.py
times_data/validation/: __init__.py  schema_check.py  structural.py
times_data/wiki/: __init__.py
(+612 files in other folders)
